UK-4: Remove firebase-debug.log from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,8 @@ Thumbs.db
 
 # Firebase
 /.firebase
-firebase-debug.log
+# firebase-debug.log
 
+# Folders used by ESLint
 .nx/cache
 .nx/workspace-data
