--- a/.github/workflows/deploy-hosting-staging.yml
+++ b/.github/workflows/deploy-hosting-staging.yml
@@ -5,7 +5,7 @@ name: Deploy to Firebase Hosting on merge
 on:
   push:
     branches:
-      - main
+      - staging
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -15,6 +15,6 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_U_KIRCHE }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_U_KIRCHE_STAGE }}
           channelId: live
-          projectId: u-kirche
+          projectId: u-kirche-stage
