--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "deploy": "firebase deploy --only hosting",
+    "deploy:prod": "firebase deploy --only hosting --project prod"
   },
   "private": true,
   "dependencies": {
